using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class Constant
{
    // animation trigger strings
    public const string ANIM_PUNCH_STOMASH = "Stomach Punch";
    public const string ANIM_KIDNEY_PUNCH_LEFT = "Kidney Punch Left";
    public const string ANIM_KIDNEY_PUNCH_RIGHT = "Kidney Punch Right";
    
    

    public const string ANIM_BLOCK = "Defense";

    public const string ANIM_TRIGGER_HURT_STOMASH = "hurt_stomash";

    public const string ANIM_IDLE = "Idle";
    public const string ANIM_WALK = "Walk";
    public const string ANIM_RUNNING = "Running";

    public const string ANIM_HEAD_HURT = "Head Hit";
    public const string ANIM_DEATH = "Knocked Out";
    public const string ANIM_JUMPTOBOXINGRING = "JumpingOverIntoCombat";

}
